--- a/src/component/styles/ItemInsert.css
+++ b/src/component/styles/ItemInsert.css
@@ -538,6 +538,7 @@
     min-height: 220px;
     padding: 43px 0;
     width: 444px;
+    cursor: pointer;
   }
   
   .item .upload-files4ee86225svg {
@@ -590,6 +591,7 @@
     margin-top: 62px;
     min-width: 169px;
     padding: 20px 48px;
+    cursor: pointer;
   }
   
   .item .text-19 {
