--- a/src/component/styles/ItemDetail.module.css
+++ b/src/component/styles/ItemDetail.module.css
@@ -505,9 +505,9 @@
   height: 29px;
   letter-spacing: 0;
   line-height: 28.8px;
-  margin-left: 194.0px;
+  text-align: center;
   white-space: nowrap;
-  width: 450px;
+  width: 1000px;
 }
 
 .ItemDetail .background {
@@ -578,6 +578,7 @@
   padding: 20px 26px;
   position: absolute;
   top: 0;
+  cursor: pointer;
 }
 
 .ItemDetail .text-1 {
@@ -622,7 +623,7 @@
 }
 
 .ItemDetail .x1ac11794-378f-404e-a96e-845e1444f16cjpg {
-  background-image: url(../assets/img/1ac11794-378f-404e-a96e-845e1444f16c-jpg@2x.png);
+  /* background-image: url(../assets/img/1ac11794-378f-404e-a96e-845e1444f16c-jpg@2x.png); */
   background-position: 50% 50%;
   background-size: cover;
   height: 476px;
@@ -658,7 +659,7 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  margin-left: 39.53px;
+  margin-left: 26px;
   margin-top: 31px;
   padding: 35px 8px;
   position: relative;
@@ -691,7 +692,7 @@
   height: 23px;
   letter-spacing: 0;
   line-height: normal;
-  margin-bottom: -4px;
+  
   width: 190px;
 }
 
@@ -704,7 +705,7 @@
   height: 23px;
   letter-spacing: 0;
   line-height: normal;
-  margin-top: -1px;
+  
   width: 137px;
 }
 
@@ -747,7 +748,7 @@
 
 .ItemDetail .data-4 {
   align-items: flex-start;
-  padding: 0 12px;
+  
   top: 11px;
 }
 
@@ -763,7 +764,7 @@
   height: 23px;
   letter-spacing: 0;
   line-height: normal;
-  margin-top: -1px;
+  
   width: 30px;
 }
 
@@ -885,7 +886,7 @@
 
 .ItemDetail .text-20 {
   height: 48px;
-  left: 7px;
+  left: 0px;
   letter-spacing: -0.65px;
   line-height: 48px;
   position: absolute;
@@ -900,7 +901,7 @@
   font-size: var(--ItemDetail--font-size-l);
   font-weight: 300;
   height: 48px;
-  left: 30px;
+  left: 0px;
   letter-spacing: -0.65px;
   line-height: 48px;
   position: absolute;
