--- a/src/component/styles/MenuDetail.module.css
+++ b/src/component/styles/MenuDetail.module.css
@@ -502,10 +502,11 @@
   height: 29px;
   letter-spacing: 0;
   line-height: 28.8px;
-  margin-left: 87.0px;
+  
   margin-top: 20px;
   white-space: nowrap;
-  width: 321px;
+  width: 1000px;
+  text-align: center;
 }
 
 .MenuDetail .background {
@@ -578,6 +579,7 @@
   padding: 20px 26px;
   position: absolute;
   top: 0;
+  cursor: pointer;
 }
 
 .MenuDetail .text-1 {
@@ -665,7 +667,7 @@
   display: flex;
   flex-direction: column;
   left: 0;
-  padding: 35px 8px;
+  padding: 35px 0px;
   position: absolute;
   top: 0;
   width: 373px;
