--- a/src/component/styles/ItemInsert.module.css
+++ b/src/component/styles/ItemInsert.module.css
@@ -1003,4 +1003,11 @@
     text-align: center;
     white-space: nowrap;
   }
-    
+.ItemInsert .Option{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: "100%";
+    border: 1px solid #ccc;
+    backgroundColor: #fff;
+}
