--- a/src/component/styles/ItemList.module.css
+++ b/src/component/styles/ItemList.module.css
@@ -841,12 +841,13 @@
   }
   
   .ItemList .x39607d95d144c4751fedd9d44017d8b7jpg {
-    background-image: url(../assets/img/39607d95d144c4751fedd9d44017d8b7-jpg@2x.png);
+    cursor: pointer;
     background-position: 50% 50%;
     background-size: cover;
     height: 80px;
     position: relative;
     width: 82px;
+    margin-left: 20px;
   }
   
   .ItemList .frame-89 {
@@ -864,6 +865,8 @@
     line-height: 21px;
     margin-top: -1.00px;
     position: relative;
+    text-align: center;
+    cursor: pointer;
   }
   
   .ItemList .data-2 {
@@ -1073,6 +1076,7 @@
     text-align: center;
     white-space: nowrap;
     width: 72px;
+    cursor: pointer;
   }
   
   .ItemList .footer {
