--- a/src/component/styles/MenuList.module.css
+++ b/src/component/styles/MenuList.module.css
@@ -820,13 +820,14 @@
 }
 
 .MenuList .x39607d95d144c4751fedd9d44017d8b7jpg {
-  background-image: url(../assets/img/39607d95d144c4751fedd9d44017d8b7-jpg@2x.png);
+  
   background-position: 50% 50%;
   background-size: cover;
   height: 80px;
   overflow: hidden;
   position: relative;
   width: 82px;
+  margin-left:30px
 }
 
 .MenuList .x2024-10-28-103829-1 {
@@ -836,6 +837,7 @@
   position: absolute;
   top: -10px;
   width: 87px;
+  cursor: pointer;
 }
 
 .MenuList .frame-89 {
@@ -853,6 +855,8 @@
   line-height: 21px;
   margin-top: -1.00px;
   position: relative;
+  text-align: center;
+  cursor: pointer;
 }
 
 .MenuList .data-2 {
