--- a/src/component/styles/ItemCategory.module.css
+++ b/src/component/styles/ItemCategory.module.css
@@ -321,7 +321,7 @@
 }
 
 .notosanskr-light-gray-nurse-16px {
-  color: var(--gray-nurse);
+  
   font-family: var(--ItemCategory--font-family-noto_sans_kr);
   font-size: var(--ItemCategory--font-size-xl);
   font-style: normal;
@@ -679,7 +679,7 @@
   letter-spacing: 0;
   line-height: 18px;
   min-width: 107px;
-  text-align: center;
+  
   white-space: nowrap;
 }
 
@@ -778,7 +778,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  height: 268px;
+  height: 100%;
   margin-top: 57px;
   padding: 16px 0;
   width: 1000px;
@@ -805,7 +805,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  height: 199px;
+  
   padding: 15px 16px;
   width: 960px;
 }
