--- a/src/component/styles/ItemUpdate.module.css
+++ b/src/component/styles/ItemUpdate.module.css
@@ -759,6 +759,7 @@
     min-height: 220px;
     padding: 43px 0;
     width: 424px;
+    cursor: pointer;
   }
   
   .ItemUpdate .upload-files4ee86225svg {
@@ -790,7 +791,7 @@
   
   .ItemUpdate .product-thumb-1bfdce747webp {
     align-self: flex-end;
-    background-image: url(../assets/img/product-thumb-1-bfdce747-webp@2x.png);
+    
     background-position: 50% 50%;
     background-size: cover;
     height: 60px;
@@ -805,7 +806,7 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    min-height: 600px;
+    min-height: 100%;
     width: 440px;
   }
   
