--- a/src/component/styles/MenuInsert.module.css
+++ b/src/component/styles/MenuInsert.module.css
@@ -639,6 +639,7 @@
   min-height: 220px;
   padding: 43px 0;
   width: 424px;
+  cursor: pointer;
 }
 
 .MenuInsert .upload-files4ee86225svg {
@@ -670,7 +671,7 @@
 
 .MenuInsert .product-thumb-1bfdce747webp {
   align-self: flex-end;
-  background-image: url(../assets/img/product-thumb-1-bfdce747-webp@2x.png);
+  
   background-position: 50% 50%;
   background-size: cover;
   height: 60px;
@@ -694,7 +695,7 @@
   display: flex;
   flex-direction: column;
   gap: 7px;
-  min-height: 80px;
+  height: 80px;
   width: 436px;
 }
 
