--- a/src/component/styles/RepairDetail.module.css
+++ b/src/component/styles/RepairDetail.module.css
@@ -766,7 +766,7 @@
   border-radius: 2px;
   display: flex;
   height: 53px;
-  justify-content: flex-end;
+  justify-content: center;
   left: 0;
   min-width: 174px;
   padding: 20px 39px;
