--- a/src/component/styles/ItemCategory.module.css
+++ b/src/component/styles/ItemCategory.module.css
@@ -611,6 +611,7 @@
 .ItemCategory .small-btn_brown {
   background-color: var(--kabul);
   left: 49px;
+  border-radius: 5px;
 }
 
 .ItemCategory .frame-301 {
