--- a/src/component/styles/RepairList.module.css
+++ b/src/component/styles/RepairList.module.css
@@ -516,7 +516,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 1415px;
+  height: 100%;
   margin-top: 15px;
   width: 1000px;
 }
@@ -628,7 +628,7 @@
 }
 
 .RepairList .overlap-group3 {
-  height: 1160px;
+  min-height: 500px;
   margin-top: 24px;
   position: relative;
   width: 1000px;
