--- a/src/component/styles/MenuList.module.css
+++ b/src/component/styles/MenuList.module.css
@@ -831,11 +831,11 @@
 }
 
 .MenuList .x2024-10-28-103829-1 {
-  height: 90px;
+  height: 100%;
   left: 0;
-  object-fit: cover;
+  
   position: absolute;
-  top: -10px;
+  object-fit: contain;
   width: 87px;
   cursor: pointer;
 }
