--- a/src/component/styles/ItemInsert.module.css
+++ b/src/component/styles/ItemInsert.module.css
@@ -727,7 +727,7 @@
   .ItemInsert .input-4 {
     align-items: flex-start;
     flex-direction: column;
-    height: 372px;
+    height: 352px;
     margin-top: 50px;
     padding: 15px 0;
     width: 440px;
@@ -796,10 +796,15 @@
     background-color: #54473f;
     border-radius: 5px;
     display: flex;
-    height: 53px;
-    margin-top: 80px;
-    min-width: 169px;
-    padding: 20px 48px;
+    height: 30px;
+    margin-top: 90px;
+    width: 80px;
+    
+    justify-content: center;
+    align-items: center;
+    /* position: absolute;
+    top:1050px;
+    left:1340px; */
   }
   
   .ItemInsert .text-12 {
@@ -810,6 +815,7 @@
     text-align: center;
     white-space: nowrap;
     width: 72px;
+    font-size: 14px;
   }
   
   .ItemInsert .footer {
