--- a/src/component/styles/ItemList.module.css
+++ b/src/component/styles/ItemList.module.css
@@ -538,9 +538,9 @@
     align-items: flex-end;
     display: flex;
     height: 50px;
-    margin-right: 11.0px;
-    margin-top: -1px;
-    min-width: 913px;
+    
+    margin-top: 15px;
+    min-width: 1000px;
   }
   
   .ItemList .frame-104 {
@@ -656,13 +656,13 @@
     font-family: var(--font-family-noto_sans_kr);
     font-size: var(--font-size-m);
     font-weight: 300;
-    height: 39px;
+    height: 40px;
     letter-spacing: 0;
     line-height: 24px;
-    margin-left: 918px;
-    text-align: end;
+    
+    text-align: start;
     width: 82px;
-    margin-top:15px;
+    
   }
   
   .ItemList .frame-92 {
@@ -680,6 +680,8 @@
     align-self: stretch;
     border-bottom-style: solid;
     border-bottom-width: 1px;
+    border-top-style: solid;
+    border-top-width: 1px;
     border-color: var(--attrangscokralabaster);
     display: flex;
     flex: 0 0 auto;
@@ -838,7 +840,7 @@
     
     position: relative;
     top: 14px;
-    width: 368px;
+    width: 343px;
   }
   
   .ItemList .x39607d95d144c4751fedd9d44017d8b7jpg {
@@ -1033,9 +1035,8 @@
   .ItemList .overlap-group {
     align-self: flex-end;
     border-radius: 2px;
-    height: 53px;
-    margin-right: 27px;
-    margin-top: 21px;
+    height: 40px;
+    
     position: relative;
     width: 169px;
   }
@@ -1061,12 +1062,15 @@
     background-color: #54473f;
     border-radius: 5px;
     display: flex;
-    height: 53px;
+    height: 40px;
     left: 0;
-    min-width: 169px;
+    width: 100px;
     padding: 20px 48px;
     position: absolute;
     top: 0;
+    justify-content: center;
+    align-items: center;
+    margin-left: 170px;
   }
   
   .ItemList .text-7-1 {
@@ -1078,6 +1082,7 @@
     white-space: nowrap;
     width: 72px;
     cursor: pointer;
+    font-size: 14px;
   }
   
   .ItemList .footer {
