--- a/src/component/styles/MenuList.module.css
+++ b/src/component/styles/MenuList.module.css
@@ -538,9 +538,9 @@
 }
 
 .MenuList .flex-row {
-  margin-right: -161px;
+  display: flex;
   margin-top: 12px;
-  min-width: 1143px;
+  min-width: 1000px;
 }
 
 .MenuList .frame-104 {
@@ -1174,11 +1174,13 @@
   background-color: #54473f;
   border-radius: 5px;
   display: flex;
-  height: 53px;
-  left: 0;
-  min-width: 169px;
+  height: 40px;
+  justify-content: center;
+    align-items: center;
+  width: 100px;
   padding: 20px 48px;
-  position: absolute;
+  margin-left: 170px;
+  
   top: 0;
 }
 
@@ -1399,8 +1401,8 @@
   height: 39px;
   letter-spacing: 0;
   line-height: 24px;
-  margin-left: 918px;
-  text-align: end;
+  
+  text-align: start;
   width: 82px;
-  margin-top:15px;
+  
 }
