--- a/src/component/styles/RepairList.module.css
+++ b/src/component/styles/RepairList.module.css
@@ -541,7 +541,7 @@
   display: flex;
   height: 38px;
   margin-left: 15px;
-  margin-top: 10px;
+  margin-top: 20px;
   min-width: 508px;
 }
 
@@ -629,7 +629,7 @@
 
 .RepairList .overlap-group3 {
   min-height: 500px;
-  margin-top: 24px;
+  margin-top: 34px;
   position: relative;
   width: 1000px;
 }
@@ -650,7 +650,7 @@
   display: flex;
   flex-direction: column;
   left: 0;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   width: 1000px;
 }
@@ -659,6 +659,8 @@
   align-items: center;
   border-bottom-style: solid;
   border-bottom-width: 1px;
+  border-top-style: solid;
+  border-top-width: 1px;
   border-color: var(--attrangscokralabaster);
   display: flex;
   flex: 0 0 auto;
